# chatgpt

./: Dockerfile  LM_Studio_SETUP.txt  README_API.md  RELEASE_FINAL.md  config.py  config.yaml  docker-compose.yml  launcher.bat  launcher.sh  run_tokintel.py  setup_tokintel.py  streamlit_app.py  synthesis.py  trigger_ci.txt
src/tokintel_v2/: .gitignore  .pre-commit-config.yaml  AUDIT_REPORT_BATCH_AUTO_ANALYZE_v2.2.md  AUTO_ANALYZE_SCHEDULER_IMPLEMENTATION.md  CHANGELOG.md  COMPLETE_AUDIT_REPORT.md  DEPLOYMENT_GUIDE.md  Dockerfile  FINAL_AUDIT_REPORT.md  FINAL_RELEASE_REPORT.md  IMPLEMENTAZIONE_COMPLETA.md  INSTALLATION_GUIDE.md  LICENSE  NOVITA_PRO.md  NUOVE_FUNZIONALITA.md  PATCH_FINALE_CURSOR.md  PROJECT_CONTEXT.md  Procfile  README.md  README_CLOUD.md  README_EN.md  README_HF.md  README_INTEGRATIONS.md  REFACTOR_REPORT.md  RELEASE_FINAL.md  RIEPILOGO_FINALE.md  TIKTOK_INTEGRATION.md  TIKTOK_LIBRARY_GUIDE.md  TODO_CLEANUP.json  app.py  audit_report.json  audit_report_batch_auto_analyze.json  batch_auto_analyze.py  cleanup_plan.md  config.yaml  config.yaml.example  config_integrations.yaml  create_release_zip.py  docker-compose.yml  final_release_prep.py  (+18 more)
src/tokintel_v2/.github/: pull_request_template.md
src/tokintel_v2/.github/workflows/: release.yml  tests.yml
src/tokintel_v2/TokIntel_v2/: audit_report.json
src/tokintel_v2/agent/: devika_team.py  scraper.py
src/tokintel_v2/agents/: __init__.py  pipeline.py
src/tokintel_v2/analytics/: AUDIT_REPORT_ANALYTICS_v2.2.md  audit_report_analytics.json  dashboard.py  trend_analyzer.py
src/tokintel_v2/api/: server.py
src/tokintel_v2/audio/: __init__.py
src/tokintel_v2/auth/: __init__.py  tiktok_oauth.py
src/tokintel_v2/core/: config.py  exceptions.py  logger.py
src/tokintel_v2/db/: audit_report_db.json  database.py
src/tokintel_v2/docs/: architecture.md  demo_walkthrough.md
src/tokintel_v2/extensions/: export_tools.py
src/tokintel_v2/huggingface/: __init__.py
src/tokintel_v2/integrations/: telegram_bot.py
src/tokintel_v2/llm/: prompts.py
src/tokintel_v2/release/: README.md
src/tokintel_v2/release/TokIntel_v2.1/: .gitignore  README.md  RELEASE_REPORT.md  VERSION.txt  config.yaml.example  install.sh  requirements.txt  run.sh
src/tokintel_v2/release/TokIntel_v2.1/.github/workflows/: audit.yml
src/tokintel_v2/release/TokIntel_v2.1/agent/: __init__.py  scraper.py  synthesis.py
src/tokintel_v2/release/TokIntel_v2.1/core/: __init__.py  config.py  logger.py
src/tokintel_v2/release/TokIntel_v2.1/llm/: handler.py  prompts.py
src/tokintel_v2/release/TokIntel_v2.1/tests/: test_config.py  test_logger.py  test_scoring.py
src/tokintel_v2/release/TokIntel_v2.1/tools/debug_tools/: INSTALL_TOOLS.md  audit_report.md  audit_script.py  docstring_fixes.py  fixes.py  post_audit_validator.py
src/tokintel_v2/release/TokIntel_v2.1/ui/: __init__.py  interface.py  streamlit_launcher.py
src/tokintel_v2/scheduler/: README.md  __init__.py  auto_scheduler.py  example_usage.py
src/tokintel_v2/scraper/: AUDIT_REPORT_SCRAPER_v2.2.md  __init__.py  audit_report_scraper.json  download_tiktok_video.py  tiktok_integration.py  tiktok_saves.py
src/tokintel_v2/scripts/: publish.sh  refactor_utils.py  run_tests.py  version.py
src/tokintel_v2/tests/: test_api.py  test_api_basic.py  test_auto_scheduler.py  test_dashboard.py  test_devika_team.py  test_export_tools.py  test_logger.py  test_nuove_funzionalita.py  test_pipeline_integration.py  test_pro_features.py  test_prompts.py  test_scoring.py  test_telegram_bot.py  test_tiktok_library.py
src/tokintel_v2/tokintel/: __main__.py
src/tokintel_v2/tools/debug_tools/: QUICK_START.md  README.md  config.py  docstring_fixes.py  fixes.py  post_audit_validator.py
src/tokintel_v2/ui/: AUDIT_REPORT_v2.2.md  analytics.py  audit_report_ui.json  chat_agents.py  cloud_interface.py  components.py  import_tiktok.py  interface.py  json_to_markdown_report.py  pro_dashboard.py  streamlit_launcher.py  tiktok_library.py  trend_personale.py
src/tokintel_v2/utils/: __init__.py  file_utils.py  pdf_exporter.py
(+81 files in other folders)
